--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: your awesome title
-page-title: your awesome page-title.
-home-title: your awesome home-title.
-description: description
+page-title: qzy的博客
+home-title: 止于至善
+description: 芜湖！起飞！
 ---
 
 {% include header.html %}
