--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: your awesome title
-page-title: qzy的博客
+page-title: QZY Blog
 home-title: 止于至善
 description: 芜湖！起飞！
 ---
